
cmake_minimum_required(VERSION 3.7)

project(untitled1)

set(CMAKE_CXX_STANDARD 11)


add_executable(struct-c
        testaa.c
        fatal.h
        aatree.c
        avltree.c
        binheap.c
        binomial.c
        cursor.c
        disjsets.c
        dsl.c
        fig1_2.c
        fig1_3.c
        fig1_4.c
        fig2_9.c
        fig2_10.c
        fig2_11.c
        fig10_38.c
        fig10_40.c
        fig10_43.c
        fig10_45.c
        fig10_46.c
        fig10_53.c
        fig10_55.c
        fig10_62.c
        hashfunc.c
        hashquad.c
        hashsep.c
        kdtree.c
        leftheap.c
        list.c
        max_sum.c
        pairheap.c
        poly.c
        queue.c
        redblack.c
        sort.c
        splay.c
        stackar.c
        stackli.c
        treap.c
        tree.c
        )