
cmake_minimum_required(VERSION 3.7)

project(structs)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(c)
add_subdirectory(cpp)

# c
#https://users.cs.fiu.edu/~weiss/dsaa_c2e/files.html
# c++
#https://users.cs.fiu.edu/~weiss/dsaa_c++4/code/
# java
#http://users.cis.fiu.edu/~weiss/dsaajava3/code/
